--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@react-navigation/bottom-tabs": "^7.4.0",
 		"@react-navigation/elements": "^2.6.3",
 		"@react-navigation/native": "^7.1.8",
+		"@tanstack/react-query": "^5.90.12",
 		"commitizen": "^4.3.1",
 		"cz-conventional-changelog": "^3.3.0",
 		"expo": "~54.0.30",
@@ -27,6 +28,7 @@
 		"expo-font": "~14.0.10",
 		"expo-haptics": "~15.0.8",
 		"expo-image": "~3.0.11",
+		"expo-linear-gradient": "~15.0.8",
 		"expo-linking": "~8.0.11",
 		"expo-router": "~6.0.21",
 		"expo-screen-orientation": "~9.0.8",
