fix(branch): brand Color and Icon improved

--- a/app.json
+++ b/app.json
@@ -1,43 +1,41 @@
 {
 	"expo": {
-		"name": "ingenious-tv",
-		"slug": "ingenious-tv",
+		"name": "Ingenious Streams",
+		"slug": "ingenious-streams",
 		"version": "1.0.0",
 		"orientation": "portrait",
 		"icon": "./assets/images/icon.png",
-		"scheme": "ingenioustv",
+		"scheme": "ingeniousstreams",
 		"userInterfaceStyle": "automatic",
 		"newArchEnabled": true,
 		"ios": {
 			"supportsTablet": true,
-			"bundleIdentifier": "com.anonymous.ingenioustv"
+			"bundleIdentifier": "com.anonymous.ingeniousstreams"
 		},
 		"android": {
 			"adaptiveIcon": {
-				"backgroundColor": "#E6F4FE",
-				"foregroundImage": "./assets/images/android-icon-foreground.png",
-				"backgroundImage": "./assets/images/android-icon-background.png",
-				"monochromeImage": "./assets/images/android-icon-monochrome.png"
+				"backgroundColor": "#FFFFFF",
+				"foregroundImage": "./assets/images/android-icon-192x192.png"
 			},
 			"edgeToEdgeEnabled": true,
 			"predictiveBackGestureEnabled": false,
-			"package": "com.anonymous.ingenioustv"
+			"package": "com.anonymous.ingeniousstreams"
 		},
 		"web": {
 			"output": "static",
-			"favicon": "./assets/images/favicon.png"
+			"favicon": "./assets/images/favicon-32x32.png"
 		},
 		"plugins": [
 			"expo-router",
 			[
 				"expo-splash-screen",
 				{
-					"image": "./assets/images/splash-icon.png",
+					"image": "./assets/images/logo.png",
 					"imageWidth": 200,
 					"resizeMode": "contain",
-					"backgroundColor": "#ffffff",
+					"backgroundColor": "#FFFFFF",
 					"dark": {
-						"backgroundColor": "#000000"
+						"backgroundColor": "#020617"
 					}
 				}
 			],
